# MercyShieldPlus

./: .gitignore  Advanced: bevy_tweening Crate (Smooth Tweens Mercy) For easing curves (ease-in-out pulse). cargo add bevy_tweening  Animations for Anomaly Bursts (Engaging Feedback)  Anomaly Burst (Scale + Color Explosion)  Anomaly Red Burst Explosion (Alert Feedback)  Best Practices for MercyShieldPlus  Buddy Message Fade + Slide (Gentle Guidance)  Build command (multi-arch for Android):  Cargo.toml  Core APIs:  Example minimal Rust (using pqcrypto-dilithium v0.3 for demo):  Example: Main screen with shield status from ViewModel.  Filetree.md  In ShieldViewModel.checkIntegrity():  Infinite Pulse for Quantum Glow (Loading or Presplash Mercy)  Install: cargo add slint  Lazy Lists for Attestation Ledger (Efficient Scrolling)  Modifiers Chain for Reusable Mercy (Best Practice)  Navigation with Compose Navigation (Multi-Screen Mercy)  README.md  Rust Implementation Example (Proprietary Style for MercyShieldPlus) Using audited pqcrypto-dilithium v0.3 (2026) as reference—custom transcription similar.  Scale and Color Pulse Animation (Quantum Glow Mercy)  Shield Status Color Transition (Green or Red Harmony)  Structure.md  Usage Update Mercy (in ShieldViewModel.checkIntegrity()):  build.gradle.kts  build.rs  egui 0.26+ (2026) great for tools, simple animator.  iced 0.12+ (2026) uses animation::Subscription for time-based.  main.rs  pq_shield.rs  settings.gradle.kts
.github/workflows/: ci-cd.yml  ci.yml  fuzz.yml  rust.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/tolc/mercyshieldplus/: MainActivity.kt
app/src/main/kotlin/com/mercy/shieldplus/: MainActivity.kt
app/src/main/kotlin/com/mercy/shieldplus/database/: AppDatabase.kt  IntegrityDao.kt  IntegrityReportEntity.kt  LogEntryEntity.kt
app/src/main/kotlin/com/mercy/shieldplus/ui/: AuthLockoutScreen.kt  AuthRetryScreen.kt  LedgerScreen.kt  LimitedShieldScreen.kt  LogsScreen.kt  MainScreen.kt  SplashScreen.kt
app/src/main/kotlin/com/mercy/shieldplus/util/: LogExportUtil.kt  PlayIntegrityUtil.kt  RootDetectionUtil.kt  SecureKeyManager.kt  SecurePassphraseManager.kt  ServerSyncUtil.kt  TamperDetectionUtil.kt
app/src/main/kotlin/com/mercy/shieldplus/viewmodel/: ShieldViewModel.kt
app/src/main/kotlin/com/mercyshieldplus/: MercyShieldPlus.kt
app/src/main/kotlin/org/tolc/divine/: MainActivity.kt
docs/: Animations.md  BestPractices.md  Ultramasterful.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ml_kem_encaps_fuzz.rs  pq_sign_fuzz.rs  pq_verify_fuzz.rs
fuzz_targets/: ml_kem_decaps_fuzz.rs  pq_blob_fuzz.rs  pq_verify_fuzz.rs
mercy_log_decryptor/: Cargo.toml
mercy_log_decryptor/src/: main.rs
mercy_verifier/: Cargo.toml
mercy_verifier/src/: main.rs
rust/: Cargo.toml  build.rs
rust/src/: integrity.rs  lib.rs
rust/tests/: integration_test.rs
src/: lib.rs  main.rs  ui.rs
tests/: integration_test.rs
