[package]
name = "mercyshieldplus"
version = "0.4.0"
edition = "2021"
description = "Proprietary Foolproof Quantum Fortress Core Eternal ⚡️"
license = "MIT"

[lib]
name = "mercyshieldplus"
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.25", features = ["bindgen"] }
pqcrypto-kyber = "0.3"
pqcrypto-dilithium = "0.3"
pqcrypto-falcon = "0.3"  # Falcon-512 lighter signatures proprietary base
pqcrypto-traits = "0.3"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[features]
default = []
