[package]
name = "mercyshieldplus_fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
mercyshieldplus = { path = ".." }  # Link to main crate mercy

# Optional AFL++ alternative
# afl = "0.15"

[[bin]]
name = "pq_sign_fuzz"
path = "fuzz_targets/pq_sign_fuzz.rs"

[[bin]]
name = "pq_verify_fuzz"
path = "fuzz_targets/pq_verify_fuzz.rs"

[[bin]]
name = "pq_blob_fuzz"
path = "fuzz_targets/pq_blob_fuzz.rs"

[[bin]]
name = "ml_kem_encaps_fuzz"
path = "fuzz_targets/ml_kem_encaps_fuzz.rs"
