[package]
name = "mercy_log_decryptor"
version = "1.0.0"
edition = "2021"
description = "MercyShieldPlus Encrypted Log Decryptor — Standalone Rust Tool Eternal ⚡️"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }  # CLI args mercy
hex = "0.4"  # Optional hex input
serde_json = { version = "1.0", features = ["pretty"] }
