[package]
name = "mercy_verifier"
version = "1.0.0"
edition = "2021"
description = "MercyShieldPlus Server Verifier — Axum PQ + Play Integrity + ML-DSA Eternal ⚡️"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ml-kem = "0.2"
ml-dsa = "0.1"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors", "trace"] }  # Optional CORS + logging mercy
