[package]
name = "mercyshieldplus"
version = "1.0.0"
edition = "2021"
description = "MercyShieldPlus Rust Core — Quantum Fortress Eternal ⚡️"
license = "MIT"

[dependencies]
ml-kem = "0.2"
ml-dsa = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["custom"] }
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = "0.10"
uniffi = { version = "0.25", features = ["cdylib"] }
base64 = "0.22"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[lib]
name = "mercyshieldplus"
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
